# vibestart

./: .gitignore  AGENTS.md  LICENSE  PROMPT.md  README.md  VERIFICATION-CHECKlist.md  verify-vibestart.js  verify-vibestart.sh  vs.project.toml
.kilocode/: mcp_settings.json
donor_info/memento-main/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
donor_info/memento-main/.claude-plugin/: marketplace.json
donor_info/memento-main/.protocols/0001-cleanup-shipped-content/: plan.md  prd.md
donor_info/memento-main/.protocols/0002-relay-token-optimization/: 01-fix-stdin-hang-and-add-artifact-path-references-for-inter-st.md  02-externalize-prompt-text-to-file.md  03-add-schema-file-to-promptaction.md  04-compact-completed-summary.md  06-update-relay-protocol-and-run-integration-test.md  plan.md  prd.md
donor_info/memento-main/.protocols/0003-workflow-engine-bugfixes/: 01-fix-workflow-correctness-bugs.md  02-fix-coverage-report-parser.md  03-fix-virtual-env-and-add-dslpy-parity-test.md  plan.md  prd.md
donor_info/memento-main/.protocols/0004-workflow-engine-hardening/: 01-fix-develop-workflow-coverage-stagnation-and-acceptance-scop.md  02-harden-engine-eviction-safety-and-sandbox-audit.md  03-remove-parallel-downgrade-in-child-runs.md  plan.json  plan.md  prd.md
donor_info/memento-main/.protocols/0005-dry-run-preview/: 01-implement-collect-all-loop-and-tree-builder.md  02-test-dry-run-on-real-workflows-and-update-docs.md  plan.json  plan.md  prd.md
donor_info/memento-main/memento/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  source-hashes.json
donor_info/memento-main/memento-workflow/: .mcp.json  CLAUDE.md  README.md  pyproject.toml
donor_info/memento-main/memento-workflow/.claude-plugin/: plugin.json
donor_info/memento-main/memento-workflow/dashboard/: __main__.py  api.py  app.py  cli.py  data.py
(+404 files in other folders)
